--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 				
 				<footer class="footer text-center py-4">
 					<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-					<p class="copyright" >Copyright &copy;<script>document.write(new Date().getFullYear());</script> | <a href="http://hamdibourounia.me/" target="_blank"> Hamdi.BOUROUNIA</a>
+					<p class="copyright" >Copyright &copy;<script>document.write(new Date().getFullYear());</script> | 
 					</p>				</footer>
 				
 			</div><!--//main-wrapper-->
